--- a/server-hosts/package.json
+++ b/server-hosts/package.json
@@ -9,24 +9,24 @@
   },
   "dependencies": {
     "0": "0.0.0",
-    "cookie-parser": "^1.3.4",
-    "edge": "^0.9.3",
-    "ejs": "^1.0.0",
-    "errorhandler": "^1.3.5",
-    "events": "^1.0.2",
-    "express": "^4.12.3",
-    "http": "*",
-    "i18n": "^0.5.0",
-    "less": "^1.7.5",
-    "method-override": "^2.3.2",
-    "morgan": "^1.5.2",
-    "promise": "^5.0.0",
-    "q": "^1.2.0",
-    "request": "^2.54.0",
-    "socket.io": "^1.3.5",
-    "underscore": "^1.8.2",
-    "urlrouter": "^0.5.4",
-    "winston": "^0.8.3"
+    "cookie-parser": "latest",
+    "edge": "latest",
+    "ejs": "latest",
+    "errorhandler": "latest",
+    "events": "latest",
+    "express": "latest",
+    "http": "latest",
+    "i18n": "latest",
+    "less": "^2.4.0",
+    "method-override": "latest",
+    "morgan": "latest",
+    "promise": "^6.1.0",
+    "q": "latest",
+    "request": "latest",
+    "socket.io": "latest",
+    "underscore": "latest",
+    "urlrouter": "latest",
+    "winston": "latest"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
