--- a/server-hosts/package.json
+++ b/server-hosts/package.json
@@ -9,24 +9,25 @@
   },
   "dependencies": {
     "0": "0.0.0",
-    "cookie-parser": "latest",
-    "edge": "latest",
-    "ejs": "latest",
-    "errorhandler": "latest",
-    "events": "latest",
-    "express": "latest",
+    "cookie-parser": "^1.4.1",
+    "date-utils": "^1.2.19",
+    "edge": "^5.0.0",
+    "ejs": "^2.4.1",
+    "errorhandler": "^1.4.3",
+    "events": "^1.1.0",
+    "express": "^4.13.4",
     "http": "latest",
-    "i18n": "latest",
-    "less": "^2.4.0",
-    "method-override": "latest",
-    "morgan": "latest",
+    "i18n": "^0.8.1",
+    "less": "^2.6.1",
+    "method-override": "^2.3.5",
+    "morgan": "^1.7.0",
     "promise": "^6.1.0",
-    "q": "latest",
-    "request": "latest",
-    "socket.io": "latest",
-    "underscore": "latest",
+    "q": "^1.4.1",
+    "request": "^2.69.0",
+    "socket.io": "^1.4.5",
+    "underscore": "^1.8.3",
     "urlrouter": "latest",
-    "winston": "latest"
+    "winston": "^2.2.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
